crates/toml/tests/snapshots/invalid/ext/inline-table/comma.stderr
TOML parse error at line 1, column 8
  |
1 | key = {,}
  |        ^
extra comma in inline table, expected key
